--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 <!-- Hero Section -->
 <section id="hero">
     <div class="hero-content">
+        <h1>Warung Pojok Sigelap</h1>
         <h1>Mangan Enak,Weteng Wareg</h1>
         <p><h2>Lauk yang dibuat dari bahan bahan alami dan higienis</h2></p>
-        <a href="https://api.whatsapp.com/send?phone=6281334892243&text=Halo%20Tuan%2c%20saya%20ingin%20pesan" target="_blank"
+        <a href="https://api.whatsapp.com/send?phone=6281334892243&text=Nyuwun%20Sewu%2c%20Kulo%20Pingin%20Tumbas Ma'em" target="_blank"
         class="btn-primary"><h2>Pesan Sekarang</h2></a>
     </div>
     <img src="foto/image-1.jpeg" alt="Gambar Produk Unggulan" class="hero-image">
@@ -86,9 +87,9 @@
 <!-- Footer -->
 <footer>
     <div class="social-icons">
-        <a href="#"><img src="foto/ico-fb.png" alt="Facebook"></a>
-        <a href="#"><img src="foto/ico-ig.png" alt="Instagram"></a>
-        <a href="#"><img src="foto/ico-tiktokk.png" alt="Tiktok"></a>
+        <a href="https://www.facebook.com/people/Warung-PojokAmrg/pfbid0EnmbMKupc3FWku8fcv9oyL1z4nczzDarSx3uCLuR5PftWrHSvqSrpx55NMDAd4zTl/?rdid=mqEWggaHBraAAfIY&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2FjWhSFFrDwxe2DsCy%2F"><img src="foto/ico-fb.png" alt="Facebook"></a>
+        <a href="https://www.instagram.com/warungpojoksigelap/?igsh=MWxyMTYydmx4cmI5OA%3D%3D#"><img src="foto/ico-ig.png" alt="Instagram"></a>
+        <a href="https://www.tiktok.com/@warung.pojok.mbah?_t=8rOyswMavuU&_r=1"><img src="foto/ico-tiktokk.png" alt="Tiktok"></a>
     </div>
     <p>Alamat Warung:Jl Sigelap,Amongrogo, Kota Batang | Telepon: 0852-2989-9178</p>
     <p>&copy; @2024 RusliKeren. Semua Hak Dilindungi.</p>
